--- a/src/Login/Views/login.fxml
+++ b/src/Login/Views/login.fxml
@@ -6,32 +6,22 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;" fx:controller="Login.Controller" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #2E8DA4;">
-         <children>
-            <Label layoutX="200.0" layoutY="200.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Welcome to" textFill="WHITE">
-               <font>
-                  <Font name="Bodoni MT Black" size="36.0" />
-               </font>
-               <padding>
-                  <Insets right="200.0" top="300.0" />
-               </padding>
-               <opaqueInsets>
-                  <Insets top="10.0" />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="20.0" left="30.0" right="10.0" />
-               </VBox.margin>
-            </Label>
-         </children>
-      </VBox>
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" />
       <VBox alignment="CENTER" layoutX="503.0" layoutY="134.0" prefHeight="333.0" prefWidth="194.0" spacing="15.0" style="-fx-padding: 20;" AnchorPane.bottomAnchor="133.0">
          <children>
+            <ImageView fitHeight="56.0" fitWidth="200.0">
+               <image>
+                  <Image url="@mlcicon.png" />
+               </image>
+            </ImageView>
             <Label alignment="BOTTOM_LEFT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="17.0" prefWidth="117.0" text="User Name">
                <font>
                   <Font name="Fira Sans Condensed Regular" size="12.0" />
@@ -59,6 +49,16 @@
             <Cursor fx:constant="V_RESIZE" />
          </cursor>
       </VBox>
+      <ImageView fitHeight="600.0" fitWidth="400.0">
+         <image>
+            <Image url="@background.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="55.0" layoutY="193.0" text="Welcome to MLCEurope" textFill="WHITE">
+         <font>
+            <Font name="Fira Sans Heavy" size="27.0" />
+         </font>
+      </Label>
    </children>
    <cursor>
       <Cursor fx:constant="DEFAULT" />
