--- a/src/Login/Views/login.fxml
+++ b/src/Login/Views/login.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;" fx:controller="Login.Controller" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.Controller">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" />
       <VBox alignment="CENTER" layoutX="503.0" layoutY="134.0" prefHeight="333.0" prefWidth="194.0" spacing="15.0" style="-fx-padding: 20;" AnchorPane.bottomAnchor="133.0">
@@ -54,9 +55,15 @@
             <Image url="@background.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="55.0" layoutY="193.0" text="Welcome to MLCEurope" textFill="WHITE">
+      <Label layoutX="35.0" layoutY="193.0" text="Welcome to MLC Europe" textFill="WHITE">
          <font>
             <Font name="Fira Sans Heavy" size="27.0" />
+         </font>
+      </Label>
+      <ProgressIndicator fx:id="info" layoutX="169.0" layoutY="492.0" progress="0.0" />
+      <Label fx:id="label_info" layoutX="90.0" layoutY="459.0" prefHeight="16.0" prefWidth="250.0" text="Label" textFill="WHITE">
+         <font>
+            <Font size="12.0" />
          </font>
       </Label>
    </children>
