--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,27 +11,18 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="secondPage.Controller" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="15.0" layoutY="14.0" opacity="0.67" prefHeight="74.0" prefWidth="1371.0" style="-fx-background-color: #2E8DA4;">
          <children>
-            <ImageView fitHeight="56.0" fitWidth="200.0" layoutX="14.0" layoutY="9.0">
+            <ImageView fitHeight="74.0" fitWidth="216.0" layoutX="-6.0">
                <image>
                   <Image url="@mlcicon.png" />
                </image>
             </ImageView>
-            <TextField alignment="CENTER" editable="false" layoutX="1170.0" layoutY="23.0" style="-fx-background-color: #2E8DA4;" text="USER NAME">
-               <font>
-                  <Font name="Ebrima Bold" size="14.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </TextField>
          </children>
       </Pane>
-      <TableView fx:id="table" layoutX="9.0" layoutY="150.0" prefHeight="580.0" prefWidth="1371.0">
+      <TableView fx:id="table" layoutY="159.0" prefHeight="580.0" prefWidth="1371.0">
         <columns>
           <TableColumn fx:id="company_name" prefWidth="206.0" text="Company Name" />
             <TableColumn fx:id="company_type" minWidth="0.0" prefWidth="194.0" text="Company Type" />
@@ -50,8 +40,8 @@
          </image>
       </ImageView>
       <ScrollBar layoutX="1373.0" layoutY="171.0" orientation="VERTICAL" prefHeight="555.0" prefWidth="14.0" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="1.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="1.0" fitWidth="233.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="28.0" fitWidth="27.0" layoutX="913.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
          <image>
          </image>
@@ -63,6 +53,11 @@
          </font>
       </Button>
       <Button layoutX="1229.0" layoutY="105.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="REFRESH" textFill="WHITE">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Button>
+      <Button layoutX="996.0" layoutY="105.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #ff6961;" text="BEGIN THE PROCESS" textFill="WHITE">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
