--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -1,53 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="Login.ControllerSecond" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="15.0" layoutY="14.0" opacity="0.67" prefHeight="74.0" prefWidth="1371.0" style="-fx-background-color: #2E8DA4;">
-         <children>
-            <ImageView fitHeight="74.0" fitWidth="216.0" layoutX="-6.0">
-               <image>
-                  <Image url="@mlcicon.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
-      <TableView fx:id="table" layoutY="159.0" prefHeight="580.0" prefWidth="1371.0">
-        <columns>
-          <TableColumn fx:id="company_name" prefWidth="206.0" text="Company Name" />
-            <TableColumn fx:id="company_type" minWidth="0.0" prefWidth="194.0" text="Company Type" />
-            <TableColumn fx:id="country" prefWidth="142.0" text="Country" />
-            <TableColumn prefWidth="171.0" text="E-mail" />
-            <TableColumn fx:id="email" prefWidth="219.0" text="Responsible Person" />
-          <TableColumn fx:id="templates" prefWidth="121.0" text="Templates" />
-            <TableColumn fx:id="how_often" prefWidth="132.0" text="How Often" />
-            <TableColumn fx:id="pre_sales" prefWidth="81.0" text="Pre-Sales" />
-            <TableColumn fx:id="sales" prefWidth="104.0" text="Sales" />
-        </columns>
-      </TableView>
-      <ImageView fitHeight="25.0" fitWidth="27.0" layoutX="1338.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-         </image>
-      </ImageView>
-      <ScrollBar layoutX="1373.0" layoutY="171.0" orientation="VERTICAL" prefHeight="555.0" prefWidth="14.0" />
-      <ImageView fitHeight="1.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="1.0" fitWidth="233.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="28.0" fitWidth="27.0" layoutX="913.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-         </image>
-      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
       <TextField layoutX="545.0" layoutY="107.0" prefHeight="25.0" prefWidth="363.0" promptText="Search" />
-      <Button layoutX="1277.0" layoutY="740.0" mnemonicParsing="false" opacity="0.65" prefHeight="21.0" prefWidth="96.0" style="-fx-background-color: #2E8DA4;" text="Save" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="1263.0" layoutY="739.0" mnemonicParsing="false" opacity="0.65" prefHeight="21.0" prefWidth="96.0" style="-fx-background-color: #2E8DA4;" text="Save" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -57,10 +27,63 @@
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Button>
-      <Button layoutX="996.0" layoutY="105.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #ff6961;" text="BEGIN THE PROCESS" textFill="WHITE">
-         <font>
-            <Font name="Ebrima Bold" size="13.0" />
-         </font>
-      </Button>
+      <TabPane layoutX="40.0" layoutY="153.0" prefHeight="573.0" prefWidth="1319.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 3; -fx-border-color: #111111;" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Pre-Sales">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="543.0" prefWidth="1302.0">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="538.0" prefWidth="1319.0">
+                           <children>
+                              <TableView fx:id="table" prefHeight="538.0" prefWidth="1346.0">
+                                <columns>
+                                    <TableColumn fx:id="company_id" prefWidth="140.0" text="Company ID" />
+                                    <TableColumn fx:id="company_name" prefWidth="206.0" text="Company Name" />
+                                    <TableColumn fx:id="company_type" minWidth="0.0" prefWidth="194.0" text="Company Type" />
+                                    <TableColumn fx:id="country" prefWidth="142.0" text="Country" />
+                                    <TableColumn prefWidth="171.0" text="E-Mails" />
+                                    <TableColumn fx:id="resp" prefWidth="219.0" text="Responsible Person" />
+                                  <TableColumn fx:id="templates" prefWidth="121.0" text="Templates" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Sales">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="539.0" prefWidth="1319.0">
+                           <children>
+                              <TableView fx:id="table1" prefHeight="539.0" prefWidth="1324.0">
+                                 <columns>
+                                    <TableColumn fx:id="company_name1" prefWidth="206.0" text="Company Name" />
+                                    <TableColumn fx:id="company_type1" minWidth="0.0" prefWidth="194.0" text="Company Type" />
+                                    <TableColumn fx:id="country1" prefWidth="142.0" text="Country" />
+                                    <TableColumn prefWidth="171.0" text="E-mail" />
+                                    <TableColumn fx:id="email1" prefWidth="219.0" text="Responsible Person" />
+                                    <TableColumn fx:id="templates1" prefWidth="121.0" text="Templates" />
+                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </TableView>
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
