--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="Login.ControllerSecond" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.ControllerSecond">
    <children>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
@@ -22,7 +23,7 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="1229.0" layoutY="105.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="REFRESH" textFill="WHITE">
+      <Button layoutX="1228.0" layoutY="100.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="REFRESH" textFill="WHITE">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
@@ -41,9 +42,10 @@
                                     <TableColumn fx:id="company_name" prefWidth="206.0" text="Company Name" />
                                     <TableColumn fx:id="company_type" minWidth="0.0" prefWidth="194.0" text="Company Type" />
                                     <TableColumn fx:id="country" prefWidth="142.0" text="Country" />
-                                    <TableColumn prefWidth="171.0" text="E-Mails" />
+                                    <TableColumn fx:id="email" prefWidth="171.0" text="E-Mails" />
                                     <TableColumn fx:id="resp" prefWidth="219.0" text="Responsible Person" />
                                   <TableColumn fx:id="templates" prefWidth="121.0" text="Templates" />
+                                    <TableColumn fx:id="templates2" prefWidth="121.0" text="Status" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -85,5 +87,12 @@
           </Tab>
         </tabs>
       </TabPane>
+      <Label fx:id="count" layoutX="946.0" layoutY="107.0" text="Label" />
+      <Label fx:id="sent" layoutX="946.0" layoutY="127.0" text="Label" />
+      <Button layoutX="40.0" layoutY="100.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="START THE PROCESS" textFill="WHITE">
+         <font>
+            <Font name="Ebrima Bold" size="13.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
