--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -2,11 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,10 +16,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.secondPage.ControllerSecond">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-      <TextField layoutX="628.0" layoutY="110.0" prefHeight="25.0" prefWidth="363.0" promptText="Search" />
-      <Button layoutX="1228.0" layoutY="100.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="REFRESH" textFill="WHITE">
+      <TextField layoutX="549.0" layoutY="113.0" prefHeight="25.0" prefWidth="363.0" promptText="Search" />
+      <Button layoutX="1217.0" layoutY="110.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="REFRESH" textFill="WHITE">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
@@ -53,13 +53,19 @@
           </Tab>
         </tabs>
       </TabPane>
-      <Label fx:id="count" layoutX="1149.0" layoutY="75.0" text="Label" />
-      <Button fx:id="process" layoutX="40.0" layoutY="100.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="170.0" style="-fx-background-color: #ff6961;" text="START THE PROCESS" textFill="WHITE">
+      <Label fx:id="count" layoutX="1177.0" layoutY="74.0" text="Label" />
+      <Button fx:id="process" layoutX="40.0" layoutY="110.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="170.0" style="-fx-background-color: #ff6961;" text="START THE PROCESS" textFill="WHITE">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Button>
-      <TextField fx:id="bitrixfield" layoutX="331.0" layoutY="110.0" promptText="Amount.." />
-      <Button fx:id="bitrixbutton" layoutX="510.0" layoutY="110.0" mnemonicParsing="false" text="BITRIX" textAlignment="CENTER" textFill="#090c32" />
+      <TextField fx:id="bitrixfield" layoutX="240.0" layoutY="112.0" promptText="Amount.." />
+      <Button fx:id="bitrixbutton" layoutX="420.0" layoutY="112.0" mnemonicParsing="false" text="BITRIX" textAlignment="CENTER" textFill="#090c32" />
+      <ProgressIndicator fx:id="indicator" layoutX="490.0" layoutY="114.0" prefHeight="25.0" prefWidth="34.0" />
+      <ImageView fitHeight="54.0" fitWidth="200.0" layoutX="631.0" layoutY="47.0">
+         <image>
+            <Image url="@imageedit_1_9783805809.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
