--- a/src/Login/Views/login.fxml
+++ b/src/Login/Views/login.fxml
@@ -66,6 +66,11 @@
             <Font size="12.0" />
          </font>
       </Label>
+      <ImageView fitHeight="178.0" fitWidth="129.0" layoutX="131.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@searchbot.png" />
+         </image>
+      </ImageView>
    </children>
    <cursor>
       <Cursor fx:constant="DEFAULT" />
