--- a/src/Login/Views/login.fxml
+++ b/src/Login/Views/login.fxml
@@ -61,7 +61,7 @@
          </font>
       </Label>
       <ProgressIndicator fx:id="info" layoutX="169.0" layoutY="492.0" />
-      <Label fx:id="label_info" layoutX="90.0" layoutY="459.0" prefHeight="16.0" prefWidth="250.0" text="Label" textFill="WHITE">
+      <Label fx:id="label_info" layoutX="90.0" layoutY="459.0" prefHeight="16.0" prefWidth="250.0" text="Fetching data from tables.." textFill="WHITE">
          <font>
             <Font size="12.0" />
          </font>
