--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Tab?>
@@ -35,11 +36,12 @@
                                     <TableColumn fx:id="company_id" prefWidth="140.0" text="Company ID" />
                                     <TableColumn fx:id="company_name" prefWidth="206.0" text="Company Name" />
                                     <TableColumn fx:id="country" prefWidth="142.0" text="Country" />
-                                    <TableColumn fx:id="email" prefWidth="171.0" text="E-Mails" />
-                                    <TableColumn fx:id="resp" prefWidth="219.0" text="Responsible Person" />
+                                    <TableColumn fx:id="email" prefWidth="165.0" text="E-Mails" />
+                                    <TableColumn fx:id="resp" prefWidth="165.0" text="Resp. Person" />
                                   <TableColumn fx:id="templates" prefWidth="121.0" text="Templates" />
                                     <TableColumn fx:id="sale" prefWidth="121.0" text="State" />
                                     <TableColumn fx:id="status" prefWidth="121.0" text="Status" />
+                                    <TableColumn fx:id="date" prefWidth="121.0" text="Last Contacted" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -67,5 +69,6 @@
             <Image url="@imageedit_1_9783805809.png" />
          </image>
       </ImageView>
+      <DatePicker fx:id="datepicker" layoutX="930.0" layoutY="114.0" promptText="Pick a date.." />
    </children>
 </AnchorPane>
