--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -61,7 +61,7 @@
             <Font name="Ebrima Bold" size="13.0" />
          </font>
       </Button>
-      <TextField fx:id="bitrixfield" layoutX="240.0" layoutY="112.0" promptText="Amount.." />
+      <TextField fx:id="bitrixfield" layoutX="240.0" layoutY="112.0" promptText="Amount..(Minimum 50)" />
       <Button fx:id="bitrixbutton" layoutX="420.0" layoutY="112.0" mnemonicParsing="false" text="BITRIX" textAlignment="CENTER" textFill="#090c32" />
       <ProgressIndicator fx:id="indicator" layoutX="490.0" layoutY="114.0" prefHeight="25.0" prefWidth="34.0" />
       <ImageView fitHeight="54.0" fitWidth="200.0" layoutX="631.0" layoutY="47.0">
