--- a/src/Login/Views/secondpage.fxml
+++ b/src/Login/Views/secondpage.fxml
@@ -18,7 +18,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.secondPage.ControllerSecond">
    <children>
       <TextField layoutX="549.0" layoutY="113.0" prefHeight="25.0" prefWidth="363.0" promptText="Search" />
-      <Button layoutX="1217.0" layoutY="110.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="RESET" textFill="WHITE">
+      <Button fx:id="reset" layoutX="1217.0" layoutY="110.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: #ff6961;" text="RESET" textFill="WHITE">
          <font>
             <Font name="Ebrima Bold" size="13.0" />
          </font>
