--- a/src/Login/Views/companysDetail.fxml
+++ b/src/Login/Views/companysDetail.fxml
@@ -19,7 +19,7 @@
             <Insets left="15.0" top="15.0" />
          </padding>
          <font>
-            <Font name="Calibri Bold" size="24.0" />
+            <Font size="11.0" />
          </font>
       </Label>
       <VBox prefHeight="427.0" prefWidth="517.0">
@@ -27,7 +27,7 @@
             <VBox prefHeight="186.0" prefWidth="388.0">
                <children>
                   <Label prefHeight="16.0" prefWidth="215.0" text="Templates" VBox.vgrow="ALWAYS" />
-                  <ComboBox prefHeight="26.0" prefWidth="378.0" promptText="Select a template..">
+                  <ComboBox fx:id="templates" prefHeight="26.0" prefWidth="378.0" promptText="Select a template..">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
@@ -85,10 +85,10 @@
             <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
          </padding>
       </VBox>
-      <TextField layoutX="517.0" layoutY="97.0" prefHeight="26.0" prefWidth="394.0" promptText="Title of the template" />
-      <TextArea layoutX="517.0" layoutY="136.0" prefHeight="226.0" prefWidth="394.0" promptText="Content" />
-      <Button layoutX="517.0" layoutY="369.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="178.0" text="Create" />
-      <Button layoutX="714.0" layoutY="369.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="197.0" text="Test" />
-      <Label layoutX="517.0" layoutY="69.0" text="Create a new template" />
+      <TextField fx:id="title" layoutX="517.0" layoutY="97.0" prefHeight="26.0" prefWidth="394.0" promptText="Title of the template" />
+      <TextArea fx:id="content" layoutX="517.0" layoutY="136.0" prefHeight="226.0" prefWidth="394.0" promptText="Content" />
+      <Button fx:id="editbutton" layoutX="517.0" layoutY="369.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="255.0" text="Edit" />
+      <Button layoutX="778.0" layoutY="369.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="138.0" text="Test" />
+      <Label layoutX="517.0" layoutY="69.0" text="Edit the template" />
    </children>
 </AnchorPane>
